# cryptopals-cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
Set-1/Challenge-1/: hexToBase64.cpp  hexToBase64.hpp  main.cpp
Set-1/Challenge-2/: fixedXOR.cpp  fixedXOR.hpp  main.cpp
Set-1/Challenge-3/: main.cpp  singleByteXORCipher.cpp  singleByteXORCipher.hpp
Set-1/Challenge-4/: breakSingleCharacterXOR.cpp  singleCharacterXOR.cpp
Set-1/Challenge-5/: main.cpp  repeatingKeyXOR.hpp
Set-1/Challenge-6/: DecryptUsingRepeatingKeyXOR.hpp  GetKey.hpp  GetKeysize.hpp  README.md  main.cpp
Set-1/Challenge-7/: main.cpp
Set-1/Challenge-8/: main.cpp
lib/openssl-3.6.1/include/openssl/: configuration.h
lib/openssl-3.6.1/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
lib/openssl-3.6.1/share/man/man1/: CA.pl.1ossl  openssl-asn1parse.1ossl  openssl-ca.1ossl  openssl-ciphers.1ossl  openssl-cmds.1ossl  openssl-cmp.1ossl  openssl-cms.1ossl  openssl-crl.1ossl  openssl-crl2pkcs7.1ossl  openssl-dgst.1ossl  openssl-dhparam.1ossl  openssl-dsa.1ossl  openssl-dsaparam.1ossl  openssl-ec.1ossl  openssl-ecparam.1ossl  openssl-enc.1ossl  openssl-engine.1ossl  openssl-errstr.1ossl  openssl-fipsinstall.1ossl  openssl-format-options.1ossl  openssl-gendsa.1ossl  openssl-genpkey.1ossl  openssl-genrsa.1ossl  openssl-info.1ossl  openssl-kdf.1ossl  openssl-list.1ossl  openssl-mac.1ossl  openssl-namedisplay-options.1ossl  openssl-nseq.1ossl  openssl-ocsp.1ossl  openssl-passphrase-options.1ossl  openssl-passwd.1ossl  openssl-pkcs12.1ossl  openssl-pkcs7.1ossl  openssl-pkcs8.1ossl  openssl-pkey.1ossl  openssl-pkeyparam.1ossl  openssl-pkeyutl.1ossl  openssl-prime.1ossl  openssl-rand.1ossl  (+20 more)
lib/openssl-3.6.1/share/man/man3/: ADMISSIONS.3ossl  ASN1_EXTERN_FUNCS.3ossl  ASN1_INTEGER_get_int64.3ossl  ASN1_INTEGER_new.3ossl  ASN1_ITEM_lookup.3ossl  ASN1_OBJECT_new.3ossl  ASN1_STRING_TABLE_add.3ossl  ASN1_STRING_length.3ossl  ASN1_STRING_new.3ossl  ASN1_STRING_print_ex.3ossl  ASN1_TIME_set.3ossl  ASN1_TYPE_get.3ossl  ASN1_aux_cb.3ossl  ASN1_generate_nconf.3ossl  ASN1_item_d2i_bio.3ossl  ASN1_item_new.3ossl  ASN1_item_sign.3ossl  ASYNC_WAIT_CTX_new.3ossl  ASYNC_start_job.3ossl  BF_encrypt.3ossl  BIO_ADDR.3ossl  BIO_ADDRINFO.3ossl  BIO_connect.3ossl  BIO_ctrl.3ossl  BIO_f_base64.3ossl  BIO_f_buffer.3ossl  BIO_f_cipher.3ossl  BIO_f_md.3ossl  BIO_f_null.3ossl  BIO_f_prefix.3ossl  BIO_f_readbuffer.3ossl  BIO_f_ssl.3ossl  BIO_find_type.3ossl  BIO_get_data.3ossl  BIO_get_ex_new_index.3ossl  BIO_get_rpoll_descriptor.3ossl  BIO_meth_new.3ossl  BIO_new.3ossl  BIO_new_CMS.3ossl  BIO_parse_hostserv.3ossl  (+622 more)
lib/openssl-3.6.1/share/man/man5/: config.5ossl  fips_config.5ossl  x509v3_config.5ossl
lib/openssl-3.6.1/share/man/man7/: EVP_ASYM_CIPHER-RSA.7ossl  EVP_ASYM_CIPHER-SM2.7ossl  EVP_CIPHER-AES.7ossl  EVP_CIPHER-ARIA.7ossl  EVP_CIPHER-BLOWFISH.7ossl  EVP_CIPHER-CAMELLIA.7ossl  EVP_CIPHER-CAST.7ossl  EVP_CIPHER-CHACHA.7ossl  EVP_CIPHER-DES.7ossl  EVP_CIPHER-IDEA.7ossl  EVP_CIPHER-NULL.7ossl  EVP_CIPHER-RC2.7ossl  EVP_CIPHER-RC4.7ossl  EVP_CIPHER-RC5.7ossl  EVP_CIPHER-SEED.7ossl  EVP_CIPHER-SM4.7ossl  EVP_KDF-ARGON2.7ossl  EVP_KDF-HKDF.7ossl  EVP_KDF-HMAC-DRBG.7ossl  EVP_KDF-KB.7ossl  EVP_KDF-KRB5KDF.7ossl  EVP_KDF-PBKDF1.7ossl  EVP_KDF-PBKDF2.7ossl  EVP_KDF-PKCS12KDF.7ossl  EVP_KDF-PVKKDF.7ossl  EVP_KDF-SCRYPT.7ossl  EVP_KDF-SS.7ossl  EVP_KDF-SSHKDF.7ossl  EVP_KDF-TLS13_KDF.7ossl  EVP_KDF-TLS1_PRF.7ossl  EVP_KDF-X942-ASN1.7ossl  (+115 more)
utils/: Base64Decode.hpp  Base64Encode.hpp  GetCharCount.hpp  GetExpectedFreqDistMap.hpp  GetHammingDistance.hpp  HexDecode.hpp  HexEncode.hpp  ReadFile.hpp  base64Char.hpp  base64LUT.hpp  freq_dist.csv  freq_dist.py
(+157 files in other folders)
